<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:key="language_preference"
        android:title="@string/select_language"
        android:summary="@string/choose_preferred_language"
        android:dialogTitle="@string/select_language_dialog_title"
        android:entries="@array/language_entries"
        android:entryValues="@array/language_values"
        android:defaultValue="en" />

    <ListPreference
        android:key="theme_preference"
        android:title="@string/select_theme"
        android:summary="@string/choose_preferred_theme"
        android:dialogTitle="@string/select_theme_dialog_title"
        android:entries="@array/theme_entries"
        android:entryValues="@array/theme_values"
        android:defaultValue="dark_theme" />


</PreferenceScreen>