<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.home.stats.topArtistTracks.ArtistInfoFragment"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/artist_image"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:layout_marginTop="48dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/artist_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/artist"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/artist_genres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/genres"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/artist_popularity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/popularity"
        android:textSize="18sp" />



</LinearLayout>