<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titleTopGenres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:background="#FFFFFF"
        android:gravity="center_vertical"
        android:padding="8dp"
        android:text="@string/top_genres_previsualization_title"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/moreTopGenres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:focusable="true"
        android:padding="8dp"
        android:text="@string/more"
        android:textColor="?android:attr/textColorPrimary"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/titleTopGenres"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.934"
        app:layout_constraintStart_toEndOf="@+id/titleTopGenres" />

    <FrameLayout
        android:id="@+id/fragmentTopGenres"
        android:layout_width="381dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@+id/moreTopGenres"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="@+id/titleTopGenres"
        app:layout_constraintTop_toBottomOf="@+id/titleTopGenres" />

    <TextView
        android:id="@+id/titleTopArtists"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="#FFFFFF"
        android:gravity="center_vertical"
        android:padding="8dp"
        android:text="@string/top_artists_previsualization_title"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/titleTopGenres"
        app:layout_constraintTop_toBottomOf="@+id/fragmentTopGenres" />

    <Button
        android:id="@+id/moreTopArtists"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:focusable="true"
        android:padding="8dp"
        android:text="@string/more"
        android:textColor="?android:attr/textColorPrimary"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/titleTopArtists"
        app:layout_constraintEnd_toEndOf="@+id/moreTopGenres"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/moreTopGenres" />

    <FrameLayout
        android:id="@+id/fragmentTopArtists"
        android:layout_width="381dp"
        android:layout_height="85dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@+id/moreTopArtists"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/titleTopArtists"
        app:layout_constraintTop_toBottomOf="@+id/titleTopArtists" />

    <TextView
        android:id="@+id/titleTopTracks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="#FFFFFF"
        android:gravity="center_vertical"
        android:padding="8dp"
        android:text="@string/top_tracks_previsualization_title"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/titleTopGenres"
        app:layout_constraintTop_toBottomOf="@+id/fragmentTopArtists" />

    <Button
        android:id="@+id/moreTopTracks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:focusable="true"
        android:padding="8dp"
        android:text="@string/more"
        android:textColor="?android:attr/textColorPrimary"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/titleTopTracks"
        app:layout_constraintEnd_toEndOf="@+id/moreTopGenres"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/moreTopGenres" />

    <FrameLayout
        android:id="@+id/fragmentTopTracks"
        android:layout_width="381dp"
        android:layout_height="85dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@+id/moreTopTracks"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/titleTopTracks"
        app:layout_constraintTop_toBottomOf="@+id/titleTopTracks" />

    <TextView
        android:id="@+id/titleHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="#FFFFFF"
        android:gravity="center_vertical"
        android:padding="8dp"
        android:text="@string/history_previsualization_title"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/titleTopGenres"
        app:layout_constraintTop_toBottomOf="@+id/fragmentTopTracks" />

    <Button
        android:id="@+id/moreHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:focusable="true"
        android:padding="8dp"
        android:text="@string/more"
        android:textColor="?android:attr/textColorPrimary"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/titleHistory"
        app:layout_constraintEnd_toEndOf="@+id/moreTopGenres"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/moreTopGenres" />

    <FrameLayout
        android:id="@+id/fragmentHistory"
        android:layout_width="381dp"
        android:layout_height="85dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@+id/moreHistory"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/titleHistory"
        app:layout_constraintTop_toBottomOf="@+id/titleHistory" />

</androidx.constraintlayout.widget.ConstraintLayout>


